# graphrag

./: .env.example  .gitattributes  .gitignore  PHASE0_STATUS.md  PHASE5_REPORT.md  PHASE7_ABLATION.md  PHASE7_HUMANIZE_V2_PREREG.md  Plan.md  README.md  main.py  pyproject.toml
byog_mini_game/: current
byog_smoke/: settings.yaml
docs/: graph_schema.md
examples/charset_normalizer/: PROVENANCE.md
examples/charset_normalizer_rust/: Cargo.toml  PORT_STATUS.md  README.md
examples/charset_normalizer_rust/packs/: README.md  cd_alpha_unicode_split.json  cd_coherence_ratio.json  cd_encoding_languages.json  constant_chardet_correspondence.json  from_bytes.json  legacy_detect.json  md_is_suspiciously_successive_range.json  mess_ratio.json  models_charsetmatch.json  models_charsetmatch_add_submatch.json  models_charsetmatch_alphabets.json  models_charsetmatch_could_be_from_charset.json  models_charsetmatch_encoding_aliases.json  models_charsetmatch_fingerprint.json  models_charsetmatch_languages.json  models_charsetmatch_multi_byte_usage.json  models_charsetmatch_output.json  models_charsetmatches.json  models_charsetmatches_append.json  models_charsetmatches_getitem.json  utils_iana_name.json  utils_unicode_range.json
examples/charset_normalizer_rust/src/: cd.rs  constant.rs  korean_codecs.rs  lib.rs  main.rs  md.rs  models.rs  python_codecs.rs  utils.rs
examples/charset_normalizer_rust/tests/: cli.rs  detection_contract.rs  off_golden_differential.rs  test_cli_differential.py  test_codec_cd_parity.py
examples/charset_normalizer_rust/tools/: check_port.sh  generate_codecs.py  scale_harness.py
examples/cjson/: PROVENANCE.md  compile_commands.json
examples/cjson_rust/: Cargo.toml
examples/diff_match_patch/: PROVENANCE.md
examples/diff_match_patch_rust/: Cargo.toml
examples/diff_match_patch_rust/src/: diff.rs  lib.rs  main.rs  matching.rs  patch.rs
examples/diff_match_patch_rust/tests/: diff_contract.rs  match_contract.rs  patch_contract.rs
examples/inih/: PROVENANCE.md  compile_commands.json
examples/inih_rust/: Cargo.toml
examples/jsmn/: PROVENANCE.md  compile_commands.json
examples/jsmn_rust/: Cargo.toml
examples/jsonpatch/: PROVENANCE.md
examples/mini_game/: __init__.py  core.py  main.py  physics.py  sim.py
examples/mini_game_rust/: Cargo.toml
examples/mini_game_rust/src/: core.rs  lib.rs  main.rs  physics.rs  sim.rs
examples/mini_game_rust/tests/: golden_contract.rs
examples/mini_lang/: __init__.py  ast_nodes.py  errors.py  eval.py  lexer.py  main.py  parser.py  tokens.py
examples/mini_lang_rust/: Cargo.toml
examples/mini_lang_rust/src/: ast_nodes.rs  errors.rs  eval.rs  lexer.rs  lib.rs  main.rs  parser.rs  tokens.rs
examples/mini_lang_rust/tests/: golden_contract.rs
examples/semantic_version/: PROVENANCE.md  __init__.py
examples/semantic_version_rust/: Cargo.toml
examples/semantic_version_rust/src/: clause.rs  identifier.rs  lib.rs  main.rs  npm.rs  range.rs  spec.rs  version.rs
examples/semantic_version_rust/tests/: golden_contract.rs  spec_contract.rs  spec_npm_contract.rs
examples/sqlparse/: PROVENANCE.md
examples/sqlparse_rust/: Cargo.toml
examples/sqlparse_rust/src/: keywords.rs  lexer.rs  lexer_rules.rs  lib.rs  main.rs  split.rs  tokens.rs
examples/sqlparse_rust/tests/: lex_contract.rs  split_contract.rs
scripts/: ablation.py  agent_port_loop.py  audit_call_edges.py  byog_graph.py  context_pack.py  extract_c.py  extract_python.py  graph_query.py  index_c.py  index_python.py  make_byog_smoke.py  mini_game_to_byog.py  port_eval.py
scripts/ablation_specs/: jsmn_api.md  jsonpatch_adequacy.json  sqlparse_split_api.md
(+74 files in other folders)
