[project]
name = "graphrag-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.3",
    "graphrag>=3.1.0",
    "networkx>=3.6.1",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.2",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
