[package]
name = "charset_normalizer_rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust port of (core of) charset-normalizer - universal charset detector"
readme = "README.md"
publish = false

[[bin]]
name = "normalizer"
path = "src/main.rs"

[dependencies]
encoding_rs = "0.8"
encoding = "0.2"
once_cell = "1"
phf = { version = "0.11", features = ["macros"] }
lazy_static = "1"
memchr = "2"
unicode-normalization = "0.1"
unicode-general-category = "0.6"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
