[package]
name = "diff_match_patch_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Pure std for the diff (v1) scope. (regex/url-equivalents arrive with v3 patch.)

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Dev-deps for golden JSON verification against the vendored Python golden_*.json.
