[package]
name = "diff_match_patch_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bitap (v2 match) uses arbitrary-precision bit arrays, mirroring Python's
# unbounded ints (patterns may exceed 64/128 bits).
num-bigint = "0.4"
num-traits = "0.2"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Dev-deps for golden JSON verification against the vendored Python golden_*.json.
