[package]
name = "semantic_version_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Mirrors the Python reference which parses with `re`.
regex = "1"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Dev-deps for golden JSON verification against the vendored Python golden_*.json.
