[package]
name = "sqlparse_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Lexer (stage 2) needs lookaround/backreferences that `regex` lacks, so the
# SQL_REGEX rules that use them go through `fancy-regex` (or hand scanners).
regex = "1"
fancy-regex = "0.13"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
